--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -102,7 +102,8 @@
                                     <tree>
                                         <field name="seedline_ids" attrs="{
                                         'required' : [('state', '=', 'confirmed')],
-                                        'readonly' : [('state', '=', 'done')],'invisible' : [('state', '=', 'draft')]}"
+                                        'readonly' : [('state', '=', 'done')],
+                                        'invisible' : ['|',('state', '=', 'draft')]}"
                                                 context="{'tree_view_ref' : 'estate_nursery.view_tree_seedline'}"/>
                                     </tree>
                                 </page>
