--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -27,10 +27,10 @@
         </record>
 
         <record model="ir.ui.view" id="view_form_seeddo">
-            <field name="name">Planting Seed </field>
+            <field name="name">Seed Delivery Order</field>
             <field name="model">estate.nursery.seeddo</field>
             <field name="arch" type="xml">
-                <form String="Planting view">
+                <form String="Seed DO View">
                     <header coolspan="10">
 
                         <button name="signal_draft" type="workflow"
@@ -70,9 +70,9 @@
                     <sheet>
                         <div class="oe_title" colors="blue">
                              <h1>
-                                <label string="Planting Seed"
+                                <label string="Seed Delivery Order For"
                                        attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
-                                <label string="Planting Seed For"
+                                <label string="Seed Delivery Order For"
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
                                     <field name="planting_code" class="oe_inline" readonly="1" />
                              </h1>
@@ -92,6 +92,11 @@
                         </group>
                         <group>
                             <notebook>
+                                <page string="Select Multiple BPB">
+                                     <group>
+                                        <field name="batch_planted_ids" string="Select Multiple BPB"/>
+                                    </group>
+                                </page>
                                 <page string="Seed DO Information">
                                     <tree>
                                         <field name="request_ids" readonly="1"
@@ -111,6 +116,19 @@
                         </group>
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="view_batch_parameter_tree">
+            <field name="name">Batch Parameter Tree</field>
+            <field name="model">estate.batch.parameter</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <tree editable="True">
+                    <field name="parameter_id" options="{'no_create_edit': True}"/>
+                    <field name="total_qty_pokok"/>
+                    <field name="batch_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
+                </tree>
             </field>
         </record>
 
@@ -136,7 +154,7 @@
                     <field name="bpb_code" string="Request No" />
                     <field name="date_request"/>
                     <field name="kebun_location_id" string="Estate"/>
-                    <field name="divisi_location_id" string="Variety"/>
+                    <field name="divisi_location_id" string="Division"/>
                     <field name="total_qty_pokok" string="Total Quantity"/>
                     <field name="state" string="Status" invisible="0"/>
                 </tree>
@@ -276,7 +294,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_list_seeddo" >
-            <field name="name">PLanting Seed</field>
+            <field name="name">Planting Seed</field>
             <field name="res_model">estate.nursery.seeddo</field>
             <field name="view_mode">tree,form</field>
         </record>
