--- a/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleaving_seed_view.xml
@@ -95,7 +95,7 @@
 
                             <group coolspan="10">
                                 <field name="culling_location_id" string="Culling location"
-                                        attrs="{'readonly': [('state','=','done')]}"/>
+                                        attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
                                 <field name="location_type" string="Location Type"
                                         attrs="{'readonly': [('state','=','done')]}" invisible="1"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
@@ -126,7 +126,7 @@
                     <field name="qty_normal_double" string="Nor Cleaving"/>
                     <field name="qty_abnormal_double" string="Abn Cleaving"/>
                     <field name="location_type" string="Location virtual" readonly="1"/>
-                    <field name="location_id" string="Location To"/>
+                    <field name="location_id" string="Location To" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Description or Comment"/>
                 </tree>
             </field>
