--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -267,18 +267,17 @@
                         <group>
                             <group>
                                 <field name="batch_id" attrs="{'required': [('state','=','draft')],
-                                'readonly': [('state','!=','draft')]}" domain="[('batch_id','=',batch_id)]"
+                                'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
-                                <field name="qty_batch" attrs="{'required': [('state','=','draft')],
-                                 'readonly': [('state','!=','draft')]}"/>
-                                <field name="qty_plant" attrs="{'required': [('state','=','draft')],
-                                 'readonly': [('state','!=','draft')]}" onchange ="_compute_plannormal"/>
-                                <field name="date_plant" attrs="{'required': [('state','=','draft')],
-                                 'readonly': [('state','!=','draft')]}"/>
+                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="qty_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"
+                                       onchange ="_compute_plannormal"/>
+                                <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
                             </group>
 
                             <group coolspan="10">
-                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}" />
+                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
+                                       options="{'no_create_edit': True}"/>
                                 <field name="qty_normal"/>
                                 <field name="qty_abnormal"/>
                                 <field name="variety" invisible="1"/>
@@ -354,9 +353,9 @@
             <field name="model">estate.nursery.selectionline</field>
             <field name="arch" type="xml">
                 <tree string="Seed Selection Line" colors="red:qty" editable="bottom">
-                    <field name="cause_id"/>
+                    <field name="cause_id" options="{'no_create_edit': True}"/>
                     <field name="qty" string="&#931; Quantity Abnormal ." sum="Qty" />
-                    <field name="location_id"/>
+                    <field name="location_id" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Add Description/Comment"/>
                 </tree>
             </field>
