--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -1,15 +1,15 @@
 <openerp>
     <data>
-        <record model="ir.ui.view" id="view_form_request_seed">
-             <field name="name">Request Seed</field>
-             <field name="model">estate.nursery.request</field>
-             <field name="inherit_id" ref="estate_nursery.view_form_request_planting"/>
-             <field name="arch" type="xml">
-                 <field name="date_request" position="after">
-                     <field name="seeddoline_id" string="Request"/>
-                 </field>
-             </field>
-         </record>
+        <!--<record model="ir.ui.view" id="view_forms_request_seed">-->
+             <!--<field name="name">Request Seed</field>-->
+             <!--<field name="model">estate.nursery.request</field>-->
+             <!--<field name="inherit_id" ref="estate_nursery.view_form_request_planting"/>-->
+             <!--<field name="arch" type="xml">-->
+                 <!--<field name="date_request" position="after">-->
+                     <!--<field name="seeddoline_id" string="Request"/>-->
+                 <!--</field>-->
+             <!--</field>-->
+         <!--</record>-->
 
         <!--view , Planting-->
         <record model="ir.ui.view" id="view_tree_seeddo">
@@ -80,13 +80,14 @@
                         <group>
 
                             <group>
-                                <field name="seed_location_id" string="Seed Location" required="True"/>
+                                <field name="seed_location_id"
+                                       string="Seed Location" required="True" options="{'no_create_edit': True}"/>
                                 <field name="date_request"/>
-                                <field name="lot_id"/>
+                                <field name="lot_id" options="{'no_create_edit': True}"/>
                             </group>
 
                             <group coolspan="10">
-                                <field name="variety_id" string="Variety"/>
+                                <field name="variety_id" string="Variety" options="{'no_create_edit': True}"/>
                                 <field name="total_qty_pokok" readonly="1"/>
                             </group>
                         </group>
@@ -97,13 +98,7 @@
                                         <field name="batch_planted_ids" string="Select Multiple BPB"/>
                                     </group>
                                 </page>
-                                <page string="Seed DO Information">
-                                    <tree>
-                                        <field name="request_ids" readonly="1"
-                                                context="{'tree_view_ref' : 'estate_nursery.view_tree_request_planting'}"/>
-                                    </tree>
-                                </page>
-                                <page string="Seed DO Result">
+                                <page string="Seed DO Transportir">
                                     <tree>
                                         <field name="seedline_ids" attrs="{
                                         'required' : [('state', '=', 'confirmed')],
@@ -125,9 +120,12 @@
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree editable="True">
-                    <field name="parameter_id" options="{'no_create_edit': True}"/>
+                    <field name="bpb_many2many" widget="many2many_tags" options="{'no_create_edit': True}"/>
                     <field name="total_qty_pokok"/>
-                    <field name="batch_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
+                    <field name="from_location_id"  widget="many2many_tags" options="{'no_create_edit': True}"/>
+                    <field name="qty_difference"/>
+                    <field name="qty_result"/>
+                    <!--<field name="batch_id" widget="many2many_tags" options="{'no_create_edit': True}"/>-->
                 </tree>
             </field>
         </record>
