--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -1,5 +1,132 @@
 <openerp>
     <data>
+         <record model="ir.ui.view" id="view_tree_recovery_seed">
+            <field name="name">Recovery Seed Tree</field>
+            <field name="model">estate.nursery.recovery</field>
+            <field name="arch" type="xml">
+                <tree string="Nursery Recovery Tree View">
+                    <field name="recovery_code" string="Recovery ID"/>
+                    <field name="recovery_date"/>
+                    <!--<field name="qty_plantedbatch" string="Quantity Planted"/>-->
+                    <field name="qty_recovery" string="Quantity Double"/>
+                    <field name="qty_normal" string="Quantity Normal"/>
+                    <field name="qty_abnormal" string="Quantity Abnormal"/>
+                    <field name="qty_total" string="&#931;  Saldo Total."/>
+                </tree>
+            </field>
+        </record>
 
+        <record model="ir.ui.view" id="view_form_recovery_nursery">
+            <field name="name">Recovery Seed </field>
+            <field name="model">estate.nursery.recovery</field>
+            <field name="arch" type="xml">
+                <form String="Nursery Recovery View">
+                    <header coolspan="10">
+                        <button name="signal_draft" type="workflow"
+                                string="Reject"
+                                class="oe_highlight"
+                                states="confirmed,approved1,approved2"
+                                groups="estate.group_assistant"/>
+
+                        <button name="signal_confirm" type="workflow"
+                                string="Confirmed"
+                                class="oe_highlight"
+                                states="draft"
+                                groups="estate.group_assistant" />
+
+                        <button name="signal_done" type="workflow"
+                                string="Done"
+                                class="oe_highlight"
+                                states="approved2"
+                                groups="estate.group_manager"/>
+
+                        <button name="signal_approved1" type="workflow"
+                                string="Estate Kasie"
+                                class="oe_highlight"
+                                states="confirmed"
+                                groups="estate.group_assistant" />
+
+                        <button name="signal_approved2" type="workflow"
+                                string="Estate Manager"
+                                class="oe_highlight"
+                                states="approved1"
+                                groups="estate.group_manager"/>
+
+                         <field name="state" widget="statusbar"
+                               statusbar_visible="draft,confirmed,approved1,approved2,done"
+                               statusbar_color='{"draft":"blue"}'/>
+                    </header>
+                    <sheet>
+                         <div class="oe_title" colors="blue">
+                             <h1>
+                                 <label string="Recovery Seed For"
+                                       attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
+                                 <label string="Recovery Seed For "
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}">
+                                     <field name="recovery_code" class="oe_inline" readonly="1" />
+                                 </label>
+                                 <field name="name" class="oe_inline" readonly="1"/>
+                             </h1>
+                         </div>
+
+                        <group>
+                            <group>
+                                <field name="selection_id" string="Selection"
+                                       domain="[('flag_recovery','=',True)]"/>
+                                <field name="recovery_date" string="Recovery Date" attrs="{'readonly': [('state','=','done')]}"/>
+                                <field name="qty_plante" string="Quantity Last planted" invisible="0" readonly="1"/>
+                                <field name="qty_recovery" string="Quantity Recovery " invisible="0" />
+                                <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
+                            </group>
+
+                            <group coolspan="10">
+                                <field name="culling_location_id" string="Culling location"
+                                        attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
+                                <field name="location_id" string="Location Batch"
+                                        attrs="{'readonly': [('state','=','done')]}"/>
+                                <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
+                                 'readonly': [('state','!=','draft')]}"/>
+                            </group>
+                        </group>
+                            <notebook>
+                                    <page string="Cleaving Line">
+                                        <tree>
+                                            <field name="recovery_line_ids" attrs="{'readonly': [('state','=','done')]}"
+                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_recoveryline_seed'}"/>
+                                        </tree>
+                                     </page>
+                            </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="view_tree_recoveryline_seed">
+            <field name="name">Recovery Seed Tree Line</field>
+            <field name="model">estate.nursery.recoveryline</field>
+            <field name="arch" type="xml">
+                <tree string="Nursery Recovery Line Tree View" editable="bottom">
+                    <field name="cause_id" string="Cause"/>
+                    <field name="recovery_seed_id" invisible="1"/>
+                    <field name="qty_abnormal" string="Qty Abnormal"/>
+                    <field name="location_type" string="Quantity Double"/>
+                </tree>
+            </field>
+        </record>
+
+        <!--Action-->
+        <record model="ir.actions.act_window" id="action_list_recovery" >
+            <field name="name">Recovery</field>
+            <field name="res_model">estate.nursery.recovery</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_search_recovery" ref="estate_nursery.view_form_recovery_nursery"/>
+        </record>
+
+        <!-- MENU -->
+        <menuitem id="nursery_seed_recovery"
+                  name="Recovery Seed"
+                  parent="nursery_seed_batch"
+                  action="action_list_recovery" sequence="17"
+                  groups="estate.group_manager"/>
     </data>
 </openerp>
