--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -211,7 +211,7 @@
                     <field name="selectionstage_id" />
                     <field name="qty_batch" string="&#931;  DO." />
                     <field name="qty_normal" string="&#931;  Normal." sum="Qty Normal"/>
-                    <field name="qty_abnormal" string="&#931;  Abnormal." sum="Qty Abnormal"/>
+                    <field name="qty_recoveryabn" string="&#931;  Abnormal." sum="Qty Abnormal"/>
                     <field name="nursery_persentagen" string="% normal. "/>
                     <field name="nursery_persentagea" string="% abnormal."/>
                     <field name="qty_plant" string="&#931;  PLT." sum="Qty Normal" />
@@ -269,25 +269,31 @@
                                 <field name="batch_id" attrs="{'required': [('state','=','draft')],
                                 'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
-                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
-                                <field name="qty_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"
-                                       onchange ="_compute_plannormal"/>
-                                <field name="qty_plante"/>
                                 <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="qty_plante" string="Quantity Planted Batch"
+                                       attrs="{'invisible': [('state','!=','done')],'readonly': [('state','=','done')]}" />
+                                <field name="qty_plant" string="Result Quantity Planted"
+                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1"
+                                       onchange ="_compute_plannormal"/>
                                 <field name="flag_recovery"/>
                             </group>
 
                             <group coolspan="10">
-                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
-                                       options="{'no_create_edit': True}"/>
-                                <field name="qty_normal"/>
-                                <field name="qty_abnormal" string="Quantity Abnormal" attrs="{'invisible':[('flag_recovery','!=', False)]}"/>
-                                <field name="qty_recoveryabn" string="Quantity Abnormal" attrs="{'invisible':[('flag_recovery','!=', True)]}"/>
-                                <field name="variety" invisible="1"/>
-                                <field name="stage" invisible="1"/>
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
+                                
+                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
+                                       options="{'no_create_edit': True}"/>
+                                <field name="qty_abnormal" string="Quantity Afkir"/>
+                                <field name="qty_recovery" attrs="{'invisible':[('flag_recovery','=', False)]}"
+                                       string="Quantity Seed Recovery"/>
+                                <field name="qty_recoveryabn" string="Total Quantity Abnormal"
+                                       attrs="{'invisible':[('flag_recovery','=', False)]}"/>
+                                <field name="qty_normal" sting="Quantity Normal" attrs="{'invisible':[('state','=','done')]}"/>
+                                <field name="variety" invisible="1"/>
+                                <field name="stage" invisible="1"/>
                                 <field name="state" invisible="1"/>
                             </group>
                         </group>
