--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -59,9 +59,9 @@
                     <sheet>
                          <div class="oe_title" colors="blue">
                              <h1>
-                                 <label string="Recovery Seed For"
+                                 <label string="Selection Recovery Seed For"
                                        attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
-                                 <label string="Recovery Seed For "
+                                 <label string="Selection Recovery Seed For "
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}">
                                      <field name="recovery_code" class="oe_inline" readonly="1" />
                                  </label>
@@ -72,18 +72,17 @@
                         <group>
                             <group>
                                 <field name="selection_id" string="Selection"
-                                       domain="[('flag_recovery','=',True)]"/>
+                                       />
                                 <field name="recovery_date" string="Recovery Date" attrs="{'readonly': [('state','=','done')]}"/>
                                 <field name="qty_plante" string="Quantity Last planted" invisible="0" readonly="1"/>
                                 <field name="qty_recovery" string="Quantity Recovery " invisible="0" />
+                                <field name="qty_normal" string="Quantity Normal" />
                                 <field name="qty_abnormal" string="Quantity Abnormal " invisible="0"/>
                             </group>
 
                             <group coolspan="10">
                                 <field name="culling_location_id" string="Culling location"
                                         attrs="{'readonly': [('state','=','done')]}" options="{'no_create_edit': True}"/>
-                                <field name="location_id" string="Location Batch"
-                                        attrs="{'readonly': [('state','=','done')]}"/>
                                 <field name="qty_total" string="Quantity Total" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}"/>
                             </group>
@@ -106,10 +105,10 @@
             <field name="model">estate.nursery.recoveryline</field>
             <field name="arch" type="xml">
                 <tree string="Nursery Recovery Line Tree View" editable="bottom">
-                    <field name="cause_id" string="Cause"/>
                     <field name="recovery_seed_id" invisible="1"/>
                     <field name="qty_abnormal" string="Qty Abnormal"/>
-                    <field name="location_type" string="Quantity Double"/>
+                    <field name="location_type" string="Location From" readonly="1"/>
+                    <field name="location_id" string="Location To" />
                 </tree>
             </field>
         </record>
