--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -170,9 +170,6 @@
                                    </h4>
                                    <ul>
                                        <li>
-                                           Variety: <field name="variety"/>
-                                       </li>
-                                       <li>
                                            Stage : <field name="selectionstage_id"/>
                                        </li>
                                        <li>
@@ -203,10 +200,8 @@
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
                 <tree string="Nursery selection View"
-                      colors="red:state=='draft';red:state=='confirmed';green:state=='done'">
+                      colors="red:state=='draft';red:state=='confirmed'; black:state=='done'">
                     <field name="selection_code" string="Selection No"/>
-                    <field name="variety" invisible="1"/>
-                    <field name="stage" invisible="1"/>
                     <field name="selection_date"/>
                     <field name="selectionstage_id" />
                     <field name="qty_batch" string="&#931;  DO." />
@@ -269,38 +264,34 @@
                                 <field name="batch_id" attrs="{'required': [('state','=','draft')],
                                 'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
+                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
+                                       options="{'no_create_edit': True}"/>
                                 <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
-                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
-                                <field name="qty_plante" string="Quantity Planted Batch"
-                                       attrs="{'invisible': [('state','!=','done')],'readonly': [('state','=','done')]}" />
-                                <field name="qty_plant" string="Result Quantity Planted"
-                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1"
-                                       onchange ="_compute_plannormal"/>
-                                <field name="flag_recovery"/>
-                            </group>
-
-                            <group coolspan="10">
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
-                                
-                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
-                                       options="{'no_create_edit': True}"/>
-                                <field name="qty_abnormal" string="Quantity Afkir"/>
-                                <field name="qty_recovery" attrs="{'invisible':[('flag_recovery','=', False)]}"
-                                       string="Quantity Seed Recovery"/>
-                                <field name="qty_recoveryabn" string="Total Quantity Abnormal"
-                                       attrs="{'invisible':[('flag_recovery','=', False)]}"/>
-                                <field name="qty_normal" sting="Quantity Normal" attrs="{'invisible':[('state','=','done')]}"/>
-                                <field name="variety" invisible="1"/>
-                                <field name="stage" invisible="1"/>
-                                <field name="state" invisible="1"/>
+
+                            </group>
+
+                            <group coolspan="10">
+                                <field name="stage_id" invisible="1"/>
+                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="qty_plante" string="Quantity Planted Batch"
+                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1" >
+                                    {‘readonly_by_pass’: True}
+                                </field>
+                                <field name="qty_plant" string="Result Quantity Planted"
+                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1"
+                                       onchange ="_compute_plannormal"/>
+                                <field name="flag_recovery"
+                                       attrs="{'readonly': [('state','=','done')],
+                                       'invisible':['|',('stage_id','!=', 2),('state','=','done')]}"/>
                             </group>
                         </group>
 
                         <group>
-                                <notebook>
-                                    <page string="Selection Line">
+                            <notebook>
+                                <page string="Abnormal Information">
                                         <tree>
                                             <field name="selectionline_ids" attrs="{'required': [('state','=','draft')],
                                                 'readonly': [('state','=','done')]}"
@@ -308,15 +299,33 @@
                                         </tree>
                                     </page>
 
-                                    <page string="Selection Recovery Line" attrs="{'invisible':[('flag_recovery','!=', True)]}">
+                                    <page string="Abnormal Recovery Information"
+                                          attrs="{'invisible':[('flag_recovery','!=', True)]}">
                                         <tree>
-                                            <field name="recoverytemp_ids" attrs="{'required': [('state','=','draft')],
+                                            <field name="recoverytemp_ids"
+                                                   attrs="{'required': [('state','=','draft')],
                                                 'readonly': [('state','=','done')]}"
                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_recoverytempline'}"/>
                                         </tree>
                                     </page>
 
-                                    <page string="Selection Information Detail">
+                                    <page string="Detail Information" attrs="{'invisible':[('state','!=','done')]}">
+                                        <group coolspan="10">
+                                            <group>
+                                                <field name="qty_abnormal" string="Quantity Afkir"/>
+                                                <field name="qty_recovery" attrs="{'invisible':[('flag_recovery','=', False)]}"
+                                                    string="Quantity Seed Recovery"/>
+                                            </group>
+                                            <group>
+                                                <field name="qty_recoveryabn" string="Total Quantity Abnormal"
+                                                    attrs="{'invisible':[('flag_recovery','=', False)]}"/>
+                                                <field name="qty_normal" string="Quantity Normal"
+                                                    attrs="{'invisible':[('state','=','done')]}"/>
+                                            </group>
+                                        </group>
+                                    </page>
+
+                                    <page string="Information Time Detail" attrs="{'invisible':[('state','!=','done')]}">
                                         <form>
                                             <group coolspan="10">
                                                 <group >
@@ -368,7 +377,7 @@
             <field name="model">estate.nursery.recoverytemp</field>
             <field name="arch" type="xml">
                 <tree string="Seed Selection Recovery Line" colors="red:qty_abn_recovery" editable="bottom">
-                    <field name="qty_abn_recovery" string="&#931; Qty Seed Recovery"/>
+                    <field name="qty_abn_recovery" string="&#931; Qty Seed Recovery" sum="Qty"/>
                     <field name="location_id" options="{'no_create_edit': True}"/>
                     <field name="comment" string="Add Description/Comment"/>
                 </tree>
