--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -282,7 +282,7 @@
                         <page string="Recovery Seed" attrs="{'invisible' : [('qty_recovery', '=',0)]}">
                             <field name="recovery_ids" string="Create Recovery Seed"
                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_recovery_seed',
-                                   'default_qty_plante': qty_planted, 'default_selection_id' : selection_ids }"/>
+                                   'default_qty_plante': qty_planted}"/>
                         </page>
 
                         <page string="Additional Information">
